# manim-table

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: Cell.md  Example_Markup_Language.md  Row.md  Table.md
manim_table/: cell.py  examples.py
manimal/: examples.py
tests/: scenes_tests.py  test_rendering.py
